# n_plus_one

./: README.md  conftest.py  pyproject.toml
config/: settings.py  urls.py
games/: managers.py  models.py  serializers.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_alter_playtime_game_alter_playtime_player.py  0003_alter_player_name.py
test/games/: factories.py  test_models.py  test_views.py
